corrected typo in repo name

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
 {{content}}
 
 <script src="https://utteranc.es/client.js"
-        repo="alb-garcia/alb-garcia.github.com"
+        repo="alb-garcia/alb-garcia.github.io"
         issue-term="pathname"
         label="comment"
         theme="github-dark"
@@ -31,12 +31,3 @@ layout: default
         async>
 </script>
 
-
-<!-- {% for tag in site.tags %} -->
-<!--   <h3>{{ tag[0] }}</h3> -->
-<!--   <ul> -->
-<!--     {% for post in tag[1] %} -->
-<!--       <li><a href="{{ post.url }}">{{ post.title }}</a></li> -->
-<!--     {% endfor %} -->
-<!--   </ul> -->
-<!-- {% endfor %}   -->
